feat: definindo espçao para os elementos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,24 +10,32 @@
 </head>
 <body>
     <header>
-        <h1>Decodificador de Texto</h1>
+        <div class="title">
+            <h1>Decodificador de Texto</h1>
+        </div>
     </header>
     <main>
         <section>
-            <textarea name="" id=""></textarea>
+            <div class="textarea-content">
+                <textarea name="" id=""></textarea>
+            </div>
         </section>
 
         <section>
-            <button>Criptografar</button>
-            <button>Descriptografar</button>
+            <div class="buttons-content">
+                <button>Criptografar</button>
+                <button>Descriptografar</button>
+            </div>
         </section>
 
         <section>
-            
+            <div class="output-text-content">
+                <p>exibir texto criptografado</p>
+            </div>
         </section>
     </main>
     <footer>
-
+        <p>© Lucas T. Gonçalves 2024</p>
     </footer>
 </body>
 </html>
