--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador de Texto</title>
     
+    <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/main.css">
 
@@ -14,7 +15,14 @@
 <body>
     <header>
         <div class="title">
-            <h1>Decodificador de Texto</h1>
+            <div id="title-icon" class="global-icon"></div>
+            <h2>Decodificador de Texto</h2>
+
+            <div class="icons">
+                <p class="minimizar">_</p>
+                <i class="fa-thin fa-square"></i>
+                <i class="fa-thin fa-x"></i>
+            </div>
         </div>
     </header>
     <main class="main-container">
@@ -22,7 +30,7 @@
             <div class="textarea-content">
                 <div class="textarea-title">
                     <div class="global-icon"></div>
-                    <h3>Decodificar</h3>
+                    <h3>Input.exe</h3>
 
                     <div class="icons">
                         <p class="minimizar">_</p>
@@ -36,8 +44,8 @@
                 </div>
                 
                 <div class="buttons-content">
-                    <button>Criptografar</button>
-                    <button>Descriptografar</button>
+                    <button id="selected" type="button">Criptografar</button>
+                    <button type="button">Descriptografar</button>
                 </div>
             </div>
         </section>
@@ -46,7 +54,7 @@
             <div class="output-text-content">
                 <div class="textarea-title">
                     <div class="global-icon"></div>
-                    <h3>Descriptografar</h3>
+                    <h3>Output.exe</h3>
 
                     <div class="icons">
                         <p class="minimizar">_</p>
