style: estilizando a div decodificador

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador de Texto</title>
     
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -23,6 +24,15 @@
                 <i class="fa-thin fa-square"></i>
                 <i class="fa-thin fa-x"></i>
             </div>
+        </div>
+
+        <div class="menu-title">
+            <ul class="menu-list">
+                <li id="list-selected">Arquivo</li>
+                <li>Editar</li>
+                <li>Ver</li>
+                <li>Opções</li>
+            </ul>
         </div>
     </header>
     <main class="main-container">
@@ -74,7 +84,9 @@
     </main>
 
     <footer>
-        <p>© Lucas T. Gonçalves 2024</p>
+        <div class="menu-init">
+            <p>© Lucas T. Gonçalves 2024</p>
+        </div>
     </footer>
 </body>
 </html>
