feat: estruturando o footer

--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
 
     <footer>
         <div class="menu-init">
+
+            <div class="init-icon">
+                <img src="assets/icons/windows.png" alt="windows">
+                <p>Iniciar</p>
+            </div>  
+            <div class="linkedin-icon">
+                <img src="assets/icons/linkedin.png" alt="linkedin">
+            </div>
+            <div class="github-icon">
+                <img src="assets/icons/github.png" alt="linkedin">
+            </div>
+            <div>
+                <p>Decodificador</p>
+            </div>
+
             <p>© Lucas T. Gonçalves 2024</p>
         </div>
     </footer>
