style: estilizando o footer

--- a/index.html
+++ b/index.html
@@ -90,17 +90,24 @@
                 <img src="assets/icons/windows.png" alt="windows">
                 <p>Iniciar</p>
             </div>  
-            <div class="linkedin-icon">
+            <div class="divisor"></div>
+            <a class="linkedin-icon" href="https://www.linkedin.com/in/lucas-t-goncalves/">
                 <img src="assets/icons/linkedin.png" alt="linkedin">
-            </div>
-            <div class="github-icon">
+            </a>
+            <a class="github-icon" href="https://github.com/luccaByte/JavaScript-Decodificador">
                 <img src="assets/icons/github.png" alt="linkedin">
-            </div>
-            <div>
+            </a>
+            <div class="divisor"></div>
+
+            <div class="init-decodif">
+                <div class="global-icon"></div>
                 <p>Decodificador</p>
             </div>
 
-            <p>© Lucas T. Gonçalves 2024</p>
+            <!-- <div class="init-datetime">
+
+            </div> -->
+
         </div>
     </footer>
 </body>
