--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/response.css">
 
     <script src="js/main.js" defer></script>
     <script src="js/date.js" defer></script>
