--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </div>
                 
                 <div class="buttons-content">
-                    <button id="selected" type="button">Criptografar</button>
-                    <button type="button">Descriptografar</button>
+                    <button id="encrypt" type="button">Criptografar</button>
+                    <button id="decrypt" type="button">Descriptografar</button>
                 </div>
             </div>
         </section>
