--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
                 </div>
                 
                 <div class="output-text">
-                    <img class="output-img" src="assets/img/pngegg.png" alt="PC pixel">
+                    <div class="output-alert">
+                        <img class="output-img" src="assets/img/pngegg.png" alt="PC pixel">
 
-                    <h1>Nenhuma mensagem encontrada</h1>
-                    <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+                        <h1>Nenhuma mensagem encontrada</h1>
+                        <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+                    </div>
                 </div>
             </div>
         </section>
