feat: uma mensagem de alerta

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                 <div class="textarea-input">
                     <textarea name="input" id="text-input" placeholder="Insira o texto aqui..."></textarea>
                 </div>
+
+                <div class="textarea-alert">
+                    <img id="caution" src="assets/img/caution.png" alt="">
+                    <p>Apenas letras minúsculas e sem acento.</p>
+                </div>
                 
                 <div class="buttons-content">
                     <button id="encrypt" type="button">Criptografar</button>
