feat: botao para copiar texto

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                         <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
                     </div>
                 </div>
+                <div class="buttons-content">
+                    <button id="output-copy">Copy</button>
+                </div>
             </div>
         </section>
     </main>
