fix: aplicando target para link

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <p>Iniciar</p>
             </div>  
             <div class="divisor"></div>
-            <a class="linkedin-icon" href="https://www.linkedin.com/in/lucas-t-goncalves/">
+            <a class="linkedin-icon" href="https://www.linkedin.com/in/lucas-t-goncalves/" target="_blank">
                 <img src="assets/icons/linkedin.png" alt="linkedin">
             </a>
-            <a class="github-icon" href="https://github.com/luccaByte/JavaScript-Decodificador">
+            <a class="github-icon" href="https://github.com/luccaByte/JavaScript-Decodificador" target="_blank">
                 <img src="assets/icons/github.png" alt="linkedin">
             </a>
             <div class="divisor"></div>
