teste responsividade mobile

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="buttons-content">
-                    <button id="output-copy">Copy</button>
+                    <button id="output-copy">Copiar</button>
                 </div>
             </div>
         </section>
