feat: add autor (vulgo eu rs) no footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                 <p>Decodificador</p>
             </div>
 
+            <div class="init-copyright">
+                <p>Lucas Ton Gonçalves - 2024</p>
+            </div>
+
             <div  class="init-datetime">
                 <p id="time"></p>
                 <p id="date"></p>
