feat: add copyright

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="init-copyright">
-                <p>Lucas Ton Gonçalves - 2024</p>
+                <p><span>&copy;</span> Lucas Ton Gonçalves - 2024</p>
             </div>
 
             <div  class="init-datetime">
